--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "extends": [
-    "@tsconfig/node18/tsconfig.json",
-    "@tsconfig/esm/tsconfig.json",
-    "@tsconfig/strictest/tsconfig.json"
+    "@tsconfig/strictest/tsconfig",
+    "@tsconfig/node18/tsconfig"
   ],
   "compilerOptions": {
     "outDir": "build",
     "baseUrl": ".",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
+    "rootDir": "src",
     "typeRoots": [
-      "node_modules/@types",
-      "types"
+      "node_modules/@types"
     ],
     "lib": [
       "es2022",
@@ -19,6 +20,6 @@
   },
   "include": [
     "src/**/*",
-    "types/**/*"
+    "./types/store.d.ts"
   ]
 }
