--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "regionist",
-  "version": "v4.0.3",
+  "version": "v4.0.4",
   "description": "Guesses the user's regional parameters on-device, in a reliable way.",
   "type": "module",
-  "types": "types",
   "exports": {
-    "import": "./dist/regionist.es.js",
-    "require": "./dist/regionist.cjs.js",
-    "default": "./dist/regionist.cjs.js"
+    ".": {
+      "types": "./types/index.d.ts",
+      "import": "./dist/regionist.es.js",
+      "require": "./dist/regionist.cjs"
+    }
   },
-  "main": "./dist/regionist.cjs.js",
+  "types": "./types/index.d.ts",
+  "main": "./dist/regionist.cjs",
   "module": "./dist/regionist.es.js",
   "scripts": {
+    "setup": "exit 0",
     "precompile": "rm -rf build/*",
     "compile": "tsc -p tsconfig.json",
     "prebuild": "rm -rf dist/*",
@@ -34,8 +37,8 @@
     "url": "https://gozel.com.tr"
   },
   "funding": {
-    "type": "ko-fi",
-    "url": "https://ko-fi.com/muratgozel"
+    "type": "patreon",
+    "url": "https://patreon.com/muratgozel"
   },
   "license": "MIT",
   "bugs": {
@@ -50,14 +53,14 @@
     "@jest/globals": "^29.5.0",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-terser": "^0.4.0",
-    "@types/node": "^18.15.11",
+    "@types/node": "^20.4.2",
     "@types/store": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "core-js": "^3.18.3",
     "eslint": "^8.37.0",
     "jest": "^29.5.0",
@@ -70,8 +73,7 @@
   "dependencies": {
     "@babel/runtime": "^7.15.4",
     "@babel/runtime-corejs3": "^7.15.4",
-    "@tsconfig/esm": "^1.0.2",
-    "@tsconfig/node18": "^1.0.1",
+    "@tsconfig/node18": "^18.2.0",
     "@tsconfig/strictest": "^2.0.0",
     "locale-util": "^3.0.11",
     "store": "^2.0.12"
