--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
   "name": "regionist",
-  "version": "v4.0.4",
+  "version": "v5.0.0",
   "description": "Guesses the user's regional parameters on-device, in a reliable way.",
   "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "types": "./types/index.d.ts",
-      "import": "./dist/regionist.es.js",
-      "require": "./dist/regionist.cjs"
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    },
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
-  "types": "./types/index.d.ts",
-  "main": "./dist/regionist.cjs",
-  "module": "./dist/regionist.es.js",
   "scripts": {
-    "setup": "exit 0",
-    "precompile": "rm -rf build/*",
-    "compile": "tsc -p tsconfig.json",
-    "prebuild": "rm -rf dist/*",
-    "build": "rollup --config rollup.config.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "docs": "typedoc --includeVersion --excludePrivate src/regionist.ts types/index.d.ts"
+    "build": "pkgroll --target=es2020 --target=node16",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
@@ -46,36 +43,23 @@
   },
   "homepage": "https://github.com/muratgozel/regionist#readme",
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.6",
-    "@jest/globals": "^29.5.0",
-    "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.3",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@types/node": "^20.4.2",
-    "@types/store": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "core-js": "^3.18.3",
-    "eslint": "^8.37.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "node-releaser": "^2.0.0-beta.4",
-    "rollup": "^3.20.2",
-    "typedoc": "^0.24.1",
-    "typescript": "^5.0.4"
+    "@jest/globals": "^29.7.0",
+    "@swc/core": "^1.4.8",
+    "@swc/jest": "^0.2.36",
+    "@tsconfig/node18": "^18.2.0",
+    "@tsconfig/node20": "^20.1.2",
+    "@tsconfig/strictest": "^2.0.3",
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "node-releaser": "^2.1.4",
+    "pkgroll": "^2.0.2",
+    "typescript": "^5.4.2",
+    "typescript-eslint": "^7.2.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
-    "@babel/runtime-corejs3": "^7.15.4",
-    "@tsconfig/node18": "^18.2.0",
-    "@tsconfig/strictest": "^2.0.0",
-    "locale-util": "^3.0.11",
+    "@types/store": "^2.0.5",
+    "locale-util": "^4.1.0",
     "store": "^2.0.12"
   }
 }
